# hackathon-climat-donnees

./: .gitignore  LICENSE.md  README.md  explo.ipynb  prototype_exploration.ipynb  pyproject.toml
input/: POIs.csv  TRACC_pivot.csv  liste_hist_tasmax.txt  liste_ssp370_tasmax.txt
output/: sample.csv  sample.geojson  sample.gpkg  sample.shx
src/hackathon_climat_donnees/: Réutilisation Eight'xtrêmes.txt  __init__.py  constants.py  explo.ipynb  join_netcdf.py  netcdf_processing.py  prep_datasets.py  prototype_exploration.ipynb  sample.csv  sample.dbf  sample.geojson  sample.gpkg  sample.shp  sample.shx
src/hackathon_climat_donnees/output/: sample.dbf  sample.gpkg  sample.shp
