[project]
name = "hackathon-climat-donnees"
version = "0.1.0"
description = ""
authors = [
    {name = "thomas.grandjean",email = "tgrandje@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "french-cities (>=1.1.4,<2.0.0)",
    "pynsee (>=0.2.4,<0.3.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "html5lib (>=1.1,<2.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "hackathon_climat_donnees", from = "src"}]


[tool.poetry.group.dev.dependencies]
spyder = "^6.1.1"
matplotlib = "^3.10.7"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
